# claude-code-history-viewer

./: .gitignore  .test-workflow  CHANGELOG.md  CLAUDE.md  Dockerfile  PR160_REVIEW_TASKS.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md  TYPE_SYSTEM_REFACTOR_SUMMARY.md  build-windows.ps1  docker-compose.yml  index.html  install-server.sh  justfile  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
src-tauri/: .env.example  Cargo.toml  tauri.conf.json  tauri.local.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/.config/: nextest.toml
src-tauri/benches/: performance.rs
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  export.rs  lib.rs  models.rs  test_utils.rs  utils.rs  wsl.rs
src-tauri/src-tauri/src/commands/codex/: CLAUDE.md
src-tauri/src-tauri/src/session/: CLAUDE.md
src-tauri/src/ai/: CLAUDE.md
src-tauri/src/commands/: antigravity.rs  archive.rs  claude_settings.rs  feedback.rs  history_backup.rs  mcp_presets.rs  metadata.rs  mod.rs  multi_provider.rs  project.rs  proptest_examples.rs  remote_credentials.rs  remote_sync.rs  secure_update.rs  session.rs  settings.rs  stats.rs  unified_presets.rs  update.rs  watcher.rs  wsl.rs
src-tauri/src/commands/session/: delete.rs  edits.rs  load.rs  mod.rs  path.rs  rename.rs  search.rs
src-tauri/src/components/AnalyticsDashboard/: CLAUDE.md
src-tauri/src/components/MessageViewer/: CLAUDE.md
src-tauri/src/components/MessageViewer/components/: CLAUDE.md
src-tauri/src/components/RecentEditsViewer/: CLAUDE.md
src-tauri/src/components/SettingsManager/: CLAUDE.md
src-tauri/src/components/SettingsManager/editor/: CLAUDE.md
src-tauri/src/components/SettingsManager/sections/: CLAUDE.md
src-tauri/src/components/contentRenderer/toolUseRenderers/: CLAUDE.md
src-tauri/src/hooks/: CLAUDE.md
src-tauri/src/i18n/: CLAUDE.md
src-tauri/src/i18n/locales/: CLAUDE.md
src-tauri/src/layouts/Header/: CLAUDE.md
src-tauri/src/models/: antigravity.rs  edit.rs  message.rs  metadata.rs  session.rs  snapshot_tests.rs  stats.rs
src-tauri/src/providers/: aider.rs  amazon_q.rs  antigravity.rs  cline.rs  codebuddy.rs  codex.rs  continue_dev.rs  copilot.rs  copilot_cli.rs  copilot_desktop.rs  crush.rs  cursor.rs  cursor_agent.rs  forgecode.rs  gemini.rs  goose.rs  kimi.rs  kiro.rs  llm.rs  mistral.rs  mod.rs  opencode.rs  openhands.rs  openinterpreter.rs  pi.rs  qwen.rs  trae.rs  vibe.rs  vscode.rs  zed.rs
src-tauri/src/remote/: mod.rs  sftp_client.rs  source.rs  sync.rs
src-tauri/src/server/: auth.rs  handlers.rs  mod.rs  state.rs
src-tauri/src/store/: CLAUDE.md
src-tauri/src/trading/: CLAUDE.md
src-tauri/src/types/: CLAUDE.md
src-tauri/src/utils/: CLAUDE.md
src-tauri/tests/: kimi_provider_test.rs  scan_all_test.rs  session_count_test.rs  tauriConfig.test.ts
(+476 files in other folders)
