[package]
name = "claude-code-history-viewer"
version = "1.0.0"
description = "Claude Code 대화 기록을 탐색하고 분석하는 데스크톱 애플리케이션"
authors = ["JaeHyeok Lee"]
license = "MIT"
repository = "https://github.com/jhlee0409/claude-code-history-viewer"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "claude_code_history_viewer_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2.7.1"
tauri-plugin-fs = "2.4.4"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-store = "2.4.1"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-http = "2.5.4"
tauri-plugin-opener = "2.5.2"
tauri-plugin-os = "2.3.2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
walkdir = "2.3"
rayon = "1.10"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.0"
urlencoding = "2.1"
sha2 = "0.10.8"
hex = "0.4.3"

[dev-dependencies]
# Core testing utilities
tempfile = "3.10.1"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Property-based testing (QuickCheck-style)
proptest = "1.4"

# Parameterized tests & fixtures
rstest = "0.18"

# Snapshot testing
insta = { version = "1.34", features = ["json", "redactions"] }

# Mocking framework
mockall = "0.12"

# Test assertions with better error messages
pretty_assertions = "1.4"
assert_matches = "1.5"

# Fake data generation
fake = { version = "2.9", features = ["derive"] }

# Test utilities
test-case = "3.3"
once_cell = "1.19"

# Async testing utilities
async-std = { version = "1.12", features = ["attributes"] }
futures = "0.3"

[[bench]]
name = "performance"
harness = false

# Profile for faster test compilation
[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1  # Faster test execution
debug = true

# Profile for release builds with debug symbols (for coverage)
[profile.coverage]
inherits = "test"
debug = true
opt-level = 0

# Lints configuration
[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
# Allow certain lints that are too strict for this project
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
